# modelcontextstandard

./: .env.template  README.md  fastapi_server_mcs_quickstart.py  mcs_minimal_client.py  pyproject.toml  requirements.txt
docker/quickstart/: Dockerfile  docker-compose.yml
drivers/: __init__.py  mcs_driver_interface.py
drivers/http_rest/: __init__.py  http_rest_driver.py
mcs/: __init__.py
mcs/drivers/: __init__.py  mcs_driver_interface.py
mcs/drivers/http_rest/: http_rest_driver.py
mcs/drivers/rest_http/: __init__.py  rest_http_driver.py
mcs/examples/: fastapi_rest_quickstart.py  mcs_minimal_client.py
