# pyproject.toml
# ────────────────────────────────────────────────────────────
# Build backend
# ────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

# ────────────────────────────────────────────────────────────
# Project metadata (PEP 621)
# ────────────────────────────────────────────────────────────
[project]
name            = "mcs-drivers"
version         = "0.1.0"
description     = "Model Context Standard (MCS) – lightweight drivers for LLM function-calling."
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "Apache 2.0" }

authors = [
  { name = "Danny Gerst", email = "d.gerst@dannygerst.de" }
]

# Core package has **no mandatory runtime deps**
dependencies = []

# ────────────────────────────────────────────────────────────
# Optional extras
# ────────────────────────────────────────────────────────────
[project.optional-dependencies]

# Production REST-HTTP driver
rest_http = [
  "requests==2.32.4"
]

# FastAPI quick-start demo (public PoC)
quickstart = [
  "fastapi==0.115.13",
  "uvicorn[standard]==0.34.3",
  "pydantic==2.11.7",
  "python-dotenv==1.1.0"
]

# Minimal demo client (Litellm + dotenv)
minimal_client = [
  "python-dotenv==1.1.0",
  "litellm==1.73.0"
]

# Install everything
all = [
  "mcs[rest_http,quickstart,minimal_client]"
]

# ────────────────────────────────────────────────────────────
# Console entry-points (optional)
# ────────────────────────────────────────────────────────────
# [project.scripts]
# mcs-quickstart   = "mcs.examples.fastapi_quickstart:main"
# mcs-demo-client  = "mcs.examples.minimal_client:main"

# ────────────────────────────────────────────────────────────
# Setuptools package discovery
# ────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["mcs"]
include = ["mcs*"]
exclude = ["mcs.tests*", "tests*"]
